recursion.cons.min.Min.scala.code
def min(l:List[Int]): Int = {
  

  if(l.head < l.tail)
  return l.head
  else
  return l.tail

  
  
}